--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,10 +19,7 @@
         placeholder="サイト内検索"
         class="h-8 w-48 rounded border border-white/20 bg-white/10 px-2 text-sm placeholder-white/60 outline-none focus:border-white/50"
       />
-      <button
-        type="submit"
-        class="h-8 rounded bg-white/15 px-3 text-sm hover:bg-white/25"
-      >
+      <button type="submit" class="h-8 rounded bg-white/15 px-3 text-sm hover:bg-white/25">
         検索
       </button>
     </form>
