--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -77,18 +77,10 @@
     <h2 class="text-md bg-gray-100 px-3 py-2 font-bold">公式リンク</h2>
     <ul class="space-y-1 px-3 py-2">
       <li>
-        <a
-          class="hover:underline"
-          href="https://tcg.kamitsubaki.jp/"
-        >公式サイト</a
-        >
+        <a class="hover:underline" href="https://tcg.kamitsubaki.jp/">公式サイト</a>
       </li>
       <li>
-        <a
-          class="hover:underline"
-          href="https://x.com/kamitsubaki_tcg"
-        >公式Xアカウント</a
-        >
+        <a class="hover:underline" href="https://x.com/kamitsubaki_tcg">公式Xアカウント</a>
       </li>
     </ul>
   </section>
