--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,18 +13,10 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       <p>おすすめページのリンクをわかりやすくまとめる</p>
       <ul class="grid list-disc gap-1 pl-5">
         <li>
-          <a
-            class="text-blue-600 hover:underline"
-            href="#"
-          >スターターデッキの紹介</a
-          >
+          <a class="text-blue-600 hover:underline" href="#">スターターデッキの紹介</a>
         </li>
         <li>
-          <a
-            class="text-blue-600 hover:underline"
-            href="#"
-          >ブースターパック一覧</a
-          >
+          <a class="text-blue-600 hover:underline" href="#">ブースターパック一覧</a>
         </li>
         <li>
           <a class="text-blue-600 hover:underline" href="#">デッキ構築の基本</a>
