--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -3,8 +3,8 @@
 ---
 
 <div class="space-y-3 text-[13px]">
-  <section class="rounded border border-gray-200">
-    <h2 class="text-md bg-gray-100 px-3 py-2 font-bold">基本情報</h2>
+  <section class="rounded border border-base-300">
+    <h2 class="text-md bg-base-200 px-3 py-2 font-bold">基本情報</h2>
     <ul class="space-y-1 px-3 py-2">
       <li><a class="hover:underline" href="#">神椿TCGとは</a></li>
       <li><a class="hover:underline" href="#">🔰初心者向け情報</a></li>
@@ -13,8 +13,8 @@
     </ul>
   </section>
 
-  <section class="rounded border border-gray-200">
-    <h2 class="text-md bg-gray-100 px-3 py-2 font-bold">カード情報</h2>
+  <section class="rounded border border-base-300">
+    <h2 class="text-md bg-base-200 px-3 py-2 font-bold">カード情報</h2>
     <h3 class="text-md px-3 py-2 font-bold">製品情報</h3>
     <ul class="space-y-1 px-3 py-2">
       <li><a class="hover:underline" href="#">スターターデッキ</a></li>
@@ -27,8 +27,8 @@
     <h3 class="text-md px-3 py-2 font-bold">エラッタ情報</h3>
   </section>
 
-  <section class="rounded border border-gray-200">
-    <h2 class="text-md bg-gray-100 px-3 py-2 font-bold">デッキ情報</h2>
+  <section class="rounded border border-base-300">
+    <h2 class="text-md bg-base-200 px-3 py-2 font-bold">デッキ情報</h2>
     <h3 class="text-md px-3 py-2 font-bold">デッキ構築の基本</h3>
     <h3 class="text-md px-3 py-2 font-bold">おすすめデッキ</h3>
     <ul class="space-y-1 px-3 py-2">
@@ -46,8 +46,8 @@
     </ul>
   </section>
 
-  <section class="rounded border border-gray-200">
-    <h2 class="text-md bg-gray-100 px-3 py-2 font-bold">公式ルール</h2>
+  <section class="rounded border border-base-300">
+    <h2 class="text-md bg-base-200 px-3 py-2 font-bold">公式ルール</h2>
     <ul class="space-y-1 px-3 py-2">
       <li><a class="hover:underline" href="#">総合ルール</a></li>
       <li><a class="hover:underline" href="#">フロアルール</a></li>
@@ -56,16 +56,16 @@
     </ul>
   </section>
 
-  <section class="rounded border border-gray-200">
-    <h2 class="text-md bg-gray-100 px-3 py-2 font-bold">イベント・大会情報</h2>
+  <section class="rounded border border-base-300">
+    <h2 class="text-md bg-base-200 px-3 py-2 font-bold">イベント・大会情報</h2>
     <ul class="space-y-1 px-3 py-2">
       <li><a class="hover:underline" href="#">イベント</a></li>
       <li><a class="hover:underline" href="#">公式大会</a></li>
     </ul>
   </section>
 
-  <section class="rounded border border-gray-200">
-    <h2 class="text-md bg-gray-100 px-3 py-2 font-bold">非公式ツール</h2>
+  <section class="rounded border border-base-300">
+    <h2 class="text-md bg-base-200 px-3 py-2 font-bold">非公式ツール</h2>
     <ul class="space-y-1 px-3 py-2">
       <li>
         <a class="hover:underline" href="#">非公式神椿TCGデッキメーカー</a>
@@ -73,8 +73,8 @@
     </ul>
   </section>
 
-  <section class="rounded border border-gray-200">
-    <h2 class="text-md bg-gray-100 px-3 py-2 font-bold">公式リンク</h2>
+  <section class="rounded border border-base-300">
+    <h2 class="text-md bg-base-200 px-3 py-2 font-bold">公式リンク</h2>
     <ul class="space-y-1 px-3 py-2">
       <li>
         <a class="hover:underline" href="https://tcg.kamitsubaki.jp/">公式サイト</a>
