--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,8 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <div class="rounded border border-gray-300">
-    <div class="border-b border-gray-200 bg-gray-100 px-4 py-3 font-bold">
+  <div class="rounded border border-base-300">
+    <div class="border-b border-base-300 bg-base-200 px-4 py-3 font-bold">
       KAMITSUBAKI CARD GAME（神椿TCG） 非公式 Wikiについて
     </div>
     <div class="space-y-4 p-4 text-[14px] leading-7">
